# DataGenFlow

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  Makefile  README.md  app.py  backend_code_guide.md  config.py  debug_pipeline.py  models.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: docs.md  feature.md  fix.md  refactor.md
.github/instructions/: *.instructions.md  review.instructions.md
.github/workflows/: pre-merge.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: claude_code_skills.md  extensibility.md  how_to_create_blocks.md  how_to_use.md  markdown_style_guide.md  overview.md  ragas_evaluation.md  template-qa-generation.md  template_data_augmentation.md  template_json_extraction.md  template_qa_generation.md  template_text_classification.md  templates.md
frontend/: .eslintrc.json  MESSAGE_FORMAT_STANDARD.md  index.css  index.html  package.json  vite.config.ts
frontend/.storybook/: preview.ts  preview.tsx
frontend/src/: App.tsx  main.tsx
lib/: constants.py  dependency_manager.py  file_watcher.py  job_processor.py  job_queue.py  llm_config.py  storage.py  template_renderer.py  workflow.py
lib/api/: extensions.py
lib/blocks/: base.py  config.py  registry.py
lib/cli/: __init__.py  client.py  main.py
lib/entities/: __init__.py  api.py  block_execution_context.py  database.py  extensions.py  job.py  llm_config.py  pipeline.py  record.py
lib/templates/: __init__.py  data_augmentation.yaml  json_generation.yaml  qa_generation.yaml  ragas_evaluation.yaml  text_classification.yaml
llm/: agent_code_guide.md  backend_technical_guide.md  frontend_technical_guide.md  project_technical_guide.md  rules-agent.md  rules-backend.md  rules-frontend.md  state-backend.md  state-frontend.md  state-project.md
scripts/: inspect_db_configs.py  test_mock_providers.py  with_server.py
tests/: conftest.py  test_api.py  test_api_regression.py  test_constraints.py  test_dependency_manager.py  test_errors.py  test_extensions_api.py  test_file_watcher.py  test_job_cancellation.py  test_job_queue.py  test_llm_config.py  test_pipeline_config_storage.py  test_pipeline_integration.py  test_pipeline_output.py  test_registry_regression.py  test_storage.py  test_template_enhanced.py  test_template_regression.py  test_template_renderer.py  test_templates.py  test_workflow.py
tests/blocks/: test_coherence_score.py  (+16 more)
(+88 files in other folders)
